--- a/.github/workflows/master_streamwave-frontend.yml
+++ b/.github/workflows/master_streamwave-frontend.yml
@@ -26,6 +26,7 @@ jobs:
       - name: npm install, build, and test
         run: |
           npm install
+          npm run build
           npm run test --if-present
 
       - name: Upload artifact for deployment job
